<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Fitness\nAssistant</string>
    <string name="fitness">Fitness</string>
    <string name="assistant">Assistant</string>
    <string name="privacy_policy_link" tools:ignore="TypographyDashes">https://www.termsfeed.com/live/cb6a31f0-6c44-406f-b3c0-1dbc3b41dddf</string>
    <string name="activity_recognition_access">FitnessAssistant would like to access Activity Recognition on your device</string>
    <string name="activity_recognition_access_denied">Activity Recognition Permission</string>
    <string name="activity_recognition_access_message_denied_forever">Pedometer services <b>can\'t work properly</b> without this permission. If you want to grant this permission to FitnessAssistant, head over to <b>Settings -> Apps -> FitnessAssistant -> Permissions</b>.</string>
    <string name="activity_recognition_access_message_denied">Pedometer services <b>can\'t work properly</b> without this permission. If you want to grant this permission to FitnessAssistant, start <b>Pedometer</b> once again.</string>
    <string name="activity_recognition_access_message1_denied_forever">SleepTracker services <b>can\'t work properly</b> without this permission. If you want to grant this permission to FitnessAssistant, head over to <b>Settings -> Apps -> FitnessAssistant -> Permissions</b>.</string>
    <string name="activity_recognition_access_message1_denied">SleepTracker services <b>can\'t work properly</b> without this permission. If you want to grant this permission to FitnessAssistant, start <b>SleepTracker</b> once again.</string>
    <string name="location_access">FitnessAssistant would like to access your location</string>
    <string name="location_access_denied">Location Permission</string>
    <string name="location_access_message_denied_forever">Activity Tracking services <b>can\'t work properly</b> without this permission. If you want to grant this permission to FitnessAssistant, head over to <b>Settings -> Apps -> FitnessAssistant -> Permissions</b>.</string>
    <string name="location_access_message_denied">Activity Tracking services <b>can\'t work properly</b> without this permission. If you want to grant this permission to FitnessAssistant, try starting this once again.</string>
    <string name="approximate_location_not_enough">Activity Tracking services <b>can\'t work properly</b> without precise location permission. If you want to grant this permission, head over to the <b>Settings -> Apps -> FitnessAssistant -> Permissions</b>.</string>
    <string name="background_location_access">FitnessAssistant would like to access your location all the time</string>
    <string name="background_location_access_message">Without this or if your Android version is lower than 10, Activity Tracking services won\'t work when our app is in background.</string>
    <string name="camera_access">FitnessAssistant would like to access your camera</string>
    <string name="camera_access_denied">Camera Permission</string>
    <string name="camera_access_message_denied_forever">Barcode scanner <b>can\'t work properly</b> without this permission. If you want to grant this permission to FitnessAssistant, head over to <b>Settings -> Apps -> FitnessAssistant -> Permissions</b>.</string>
    <string name="camera_access_message_denied">Barcode scanner  <b>can\'t work properly</b> without this permission. If you want to grant this permission to FitnessAssistant, head over to the <b>Activity section</b> once again.</string>
    <string name="server_client_id" tools:ignore="TypographyDashes">545598236576-1uj5ad6vbdt4b3c2fdvk356qad0r5di3.apps.googleusercontent.com</string>
    <string name="facebook_app_id">416273409983887</string>
    <string name="maps_api_key">AIzaSyAuHLv-Gt-_-0lI-OVjv0NCtVSCjd3ITMg</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="reset_password">Reset Password</string>
    <string name="create_account">Create an Account</string>
    <string name="register">Register</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="username">Username</string>
    <string name="send_email_verification">Resend Mail</string>
    <string name="sign_out">Sign Out</string>
    <string name="or">OR</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="link">Link</string>
    <string name="link_with_fitness_assistant">Link our Account</string>
    <string name="link_with_facebook">Link with Facebook</string>
    <string name="link_with_google">Link with Google</string>
    <string name="unlink_facebook">Unlink Facebook</string>
    <string name="unlink_google">Unlink Google</string>
    <string name="delete_account">Delete Account</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="change">Change</string>
    <string name="do_not_change">Don\'t Change</string>
    <string name="set">Set</string>
    <string name="continue_ad">Continue</string>
    <string name="change_password">Change Password</string>
    <string name="your_profile">Your Profile</string>
    <string name="settings">Settings</string>
    <string name="link_accounts">Link Accounts</string>
    <string name="preferences">Preferences</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="light_mode">Light Mode</string>
    <string name="select_language">Select Language</string>
    <string name="ok">OK</string>
    <string name="change_profile_picture">Change Profile Picture</string>
    <string name="stop_activity">Stop tracking </string>
    <string name="stop_activity_save">Stop tracking without saving</string>
    <string name="goals">Goals</string>
    <string name="weight">Weight</string>
    <string name="start">Start</string>
    <string name="current_weight">Current Weight</string>
    <string name="goal">Goal</string>
    <string name="personal_data">Personal Data</string>
    <string name="account_data">Account Data</string>
    <string name="account_authentication">Account Authentication</string>
    <string name="account_appearance">Account Appearance</string>
    <string name="basic_data">Basic Data</string>
    <string name="current_height">Current Height</string>
    <string name="gender">Gender</string>
    <string name="units_preference">Units Preference</string>
    <string name="birthdate">Birthdate</string>
    <string name="last_updated">Last Updated</string>
    <string name="backup_recommended_message">It is recommended to back up your data before you sign out. Otherwise all your previous progress will be lost.</string>
    <string name="register_unsuccessful">Register Unsuccessful</string>
    <string name="empty_email">Email cannot be empty</string>
    <string name="email_not_registered">This email isn\'t connected with a FitnessAssistant account.
        Please create an account.</string>
    <string name="invalid_email">Text entered is not an email address. Please try again.</string>
    <string name="email_already_registered">This email is already connected with a FitnessAssistant account.
        Use it to sign in or create a new account using another one.</string>
    <string name="email_connected_via_google">This email is connected with a FitnessAssistant account using Google Sign In.
        Use it to sign in with Google.</string>
    <string name="email_connected_via_facebook">This email is connected with a FitnessAssistant account using Facebook Sign In.
        Use it to sign in with Facebook.</string>
    <string name="empty_password">Password cannot be empty</string>
    <string name="password_not_enough_characters">Password must be >5 characters</string>
    <string name="incorrect_password">"The password you entered is incorrect. Please try again."</string>
    <string name="passwords_not_equal">Passwords must be equal</string>
    <string name="password_not_strong_enough">Password is not strong enough. Password must contain at least one lowercase and uppercase character, one digit and one special character (!@#&amp;(){}:;\',?/*~$^+=&lt;&gt;)</string>
    <string name="empty_name">Username cannot be empty</string>
    <string name="username_first_char_error">Username must start with a letter or a number</string>
    <string name="username_other_chars_error">First character may be followed only by letters, numbers,
        dots, hyphens and underscores(.-_) but those must not appear consecutively</string>
    <string name="username_too_long_error">Username must be at most 20 characters long</string>
    <string name="username_too_short_error">Username must be at least 5 characters long</string>
    <string name="username_last_char_error">Username must end with a letter or a number</string>
    <string name="enter_credentials">Enter your Email and Password</string>
    <string name="forgot_password"><i><u>Forgot Password</u></i><b> ?</b></string>
    <string name="forgot_your_password">Forgot Your Password?</string>
    <string name="large_password_reset_text">That\'s OK, it happens…\n\n
        Just enter the email address you used to register and we\'ll send you a reset link.</string>
    <string name="link_will_be_sent"><i>The link in the email will expire in 1 hour. Firebase does not check the strength of the password, so make sure you set a strong one.</i></string>
    <string name="link_has_been_sent">Email has been sent</string>
    <string name="register_agreement">By registering for a new FitnessAssistant\naccount you must agree to our <u>Privacy Policy</u></string>
    <string name="register_for_free">Start your fitness journey for free</string>
    <string name="not_a_member_yet"><i>Not a member yet </i><b>   -></b></string>
    <string name="register_u"><i><u>Register </u></i></string>
    <string name="verify_your_email">Verify your Email</string>
    <string name="verification_will_be_sent"><i>If you somehow haven\'t received any mail we can send you another one.\nIf you\'ve made a mistake simply sign out. (go back)</i></string>
    <string name="email_verification_required">We have sent you an email verification link.\nVerify now to finish creating your account.\n(Google sign in overwrites current credentials)</string>
    <string name="hold_for_signing_out">Hold the button to sign out</string>
    <string name="successful_verification_sent">Email verification has been sent</string>
    <string name="unsuccessful_verification_sent">Something went wrong.\nCheck if the email is already in your inbox or try again later.</string>
    <string name="verified_false">verified: false</string>
    <string name="account_created_username_update_unsuccessful">Account created, username update unsuccessful</string>
    <string name="google_sign_in_unsuccessful">Google Sign In Unsuccessful</string>
    <string name="re_authenticate_your_account">Authenticate Your Account</string>
    <string name="re_authentication_message">In order to continue, authenticate your account once again by entering your password</string>
    <string name="change_username">Change Username</string>
    <string name="change_email">Change Email</string>
    <string name="skip">Skip</string>
    <string name="proceed">Proceed</string>
    <string name="centimeters">Centimeters</string>
    <string name="kilograms">Kilograms</string>
    <string name="what_are_your_unit_preferences">What Are Your\nUnit Preferences?</string>
    <string name="distance_colon">Distance:</string>
    <string name="height_colon">Height:</string>
    <string name="weight_colon">Weight:</string>
    <string name="energy_colon">Energy:</string>
    <string name="liquid_colon">Liquid:</string>
    <string name="kilometres">Kilometres</string>
    <string name="calories">Calories</string>
    <string name="litres">Litres</string>
</resources>