<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/settings_field"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="20dp"
    android:paddingBottom="10dp"
    android:paddingStart="10dp"
    android:paddingEnd="10dp">

    <!-- Dialog Drawable -->
    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/dialog_drawable"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp"

        android:layout_gravity="center" />

    <!-- Dialog Header -->
    <TextView
        android:id="@+id/dialog_header"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:gravity="center"

        android:text="@string/re_authenticate_your_account"
        android:textSize="22sp"
        android:textColor="@color/SpaceCadet"
        android:textStyle="bold" />

    <!-- Languages ListView -->
    <ListView
        android:id="@+id/languagesList"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginTop="10dp"

        android:gravity="center"

        android:text="@string/re_authentication_message"
        android:textSize="17sp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:textColor="@color/BlueYonder"
        />

    <!-- Dialog Negative Button -->
    <Button
        android:id="@+id/dialog_negative_button"

        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="15dp"

        android:layout_gravity="center"

        android:text="@string/cancel"
        android:textAllCaps="false"
        android:textColor="@color/Flame"

        android:textSize="16sp"
        tools:ignore="TextContrastCheck" />

</LinearLayout>